# Miniscience4Term

./: CMakeLists.txt  Turm_part_3.stl  VW_Bus_R_band.stl  sample03.cpp  sample04.cpp
Lab1/: Epizode0.cpp  Epizode1.cpp  Epizode1_Extrude.cpp  Epizode1_Mesh_STL.cpp  Epizode2.cpp  Model.stl  Thorus.stl
Lab2/: Thorus.py  tetr3d-step-0.vtu
Lab3/: navier_stokes_cylinder.py
Lab3/navier_stokes_cylinder/: pressure000000.vtu  pressure000001.vtu  pressure000002.vtu  pressure000003.vtu  pressure000004.vtu  pressure000005.vtu  pressure000006.vtu  pressure000007.vtu  pressure000008.vtu  pressure000009.vtu  pressure000010.vtu  pressure000011.vtu  pressure000012.vtu  pressure000013.vtu  pressure000014.vtu  pressure000015.vtu  pressure000016.vtu  pressure000017.vtu  pressure000018.vtu  pressure000019.vtu  pressure000020.vtu  pressure000021.vtu  pressure000022.vtu  pressure000023.vtu  pressure000024.vtu  pressure000025.vtu  pressure000026.vtu  pressure000027.vtu  pressure000028.vtu  pressure000029.vtu  pressure000030.vtu  pressure000031.vtu  pressure000032.vtu  pressure000033.vtu  pressure000034.vtu  pressure000035.vtu  pressure000036.vtu  pressure000037.vtu  pressure000038.vtu  pressure000039.vtu  (+1960 more)
